# popgpt

./: .coverage  Makefile  README.md  pyproject.toml  requirements.txt  scaling_laws.ipynb  setup.py
.github/workflows/: test.yml
configs/: finetune_calculator.yaml  sample_calculator.yaml  sample_gpt.yaml  sample_reverser.yaml  sample_shakespeare.yaml  sample_wordcalc.yaml  train_calculator.yaml  train_gpt.yaml  train_reverser.yaml  train_shakespeare_char.yaml  train_wordcalc.yaml
data_generators/: __init__.py  calculator.py  common.py  gpt.py  reverser.py  shakespeare.py  wordcalc.py
docs/: parameters.md
models/: translator.py  whisper.py
src/popgpt/: __init__.py  cli.py
src/popgpt/checkpoint/: __init__.py  manager.py
src/popgpt/config/: __init__.py  loader.py  models.py
src/popgpt/core/: __init__.py  model.py  protocols.py
src/popgpt/data/: __init__.py  loader.py
src/popgpt/sampling/: __init__.py  sampler.py
src/popgpt/training/: __init__.py  evaluator.py  scheduler.py  trainer.py
src/popgpt/utils/: __init__.py  device.py  visualization.py
tests/: conftest.py
tests/integration/: test_training_flow.py
tests/unit/checkpoint/: test_manager.py
tests/unit/config/: test_config_loader.py  test_models.py
tests/unit/core/: test_model.py
tests/unit/data/: test_data_loader.py  test_masking.py
tests/unit/sampling/: test_sampler.py
tests/unit/training/: test_evaluator.py  test_scheduler.py
tests/unit/utils/: test_device.py  test_visualization.py
